# data_engineering

dbt_snowflake_project/: .pre-commit-config.yaml  .sqlfluff  CONTRIBUTING.md  DATA_LINEAGE_SETUP.md  DEPLOYMENT_GUIDE.md  GETTING_STARTED.md  INSTALL_GUIDE.md  QUICK_START_CHECKLIST.md  README.md  dbt_core_dag.py  dbt_project.yml  packages.yml  profiles_template.yml  requirements-core.txt  requirements.txt  setup_profiles.py
dbt_snowflake_project/.github/workflows/: cd.yml  ci.yml  terraform.yml
dbt_snowflake_project/dbt-env/: pyvenv.cfg
dbt_snowflake_project/dbt-env/Scripts/: activate  activate.bat
dbt_snowflake_project/macros/: data_quality_flags.sql  get_business_metrics.sql
dbt_snowflake_project/models/example/: sources.yml
dbt_snowflake_project/models/marts/: fct_daily_order_revenue.sql
dbt_snowflake_project/models/marts/core/: dim_customers.sql
dbt_snowflake_project/models/marts/finance/: fct_order_line_items.sql
dbt_snowflake_project/models/staging/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
dbt_snowflake_project/monitoring/: alerts.py  data_quality_dashboard.py
dbt_snowflake_project/terraform/: README.md  main.tf  outputs.tf  snowflake_resources.tf  terraform.tfvars.example  variables.tf
dbt_snowflake_project/tests/: snowflake_test.yml
dbt_snowflake_project/tests/generic/: test_positive_values.sql  test_valid_email.sql
dbt_snowflake_project/tests/singular/: test_customer_data_quality.sql  test_order_amount_consistency.sql  test_revenue_reconciliation.sql
stock-market-modern-elt-pipeline-main/: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_vs_AIRFLOW.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  cleanup_v1_files.ps1  cleanup_v1_files.sh  docker-compose.yml  pyproject.toml  requirements.txt
stock-market-modern-elt-pipeline-main/dags/: stock_market_dag.py  stock_market_dag_v2.py
stock-market-modern-elt-pipeline-main/dataproc_jobs/: transform_stock_data_pipeline.py  transform_stock_data_v2.py
stock-market-modern-elt-pipeline-main/infra/: main.tf  variables.tf
stock-market-modern-elt-pipeline-main/setup/: gcp_setup.md
stock-market-modern-elt-pipeline-main/src/: __init__.py
stock-market-modern-elt-pipeline-main/src/config/: __init__.py  settings.py
stock-market-modern-elt-pipeline-main/src/extractors/: __init__.py  yahoo_finance.py
stock-market-modern-elt-pipeline-main/src/transformers/: __init__.py  spark_transformer.py
stock-market-modern-elt-pipeline-main/terraform/: main.tf  outputs.tf  variables.tf
stock-market-modern-elt-pipeline-main/tests/: __init__.py  test_config.py
